--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#007cc7" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Daniel Ikoyo is a FullStack web developer who specializes in building scalable, responsive, and aesthetic web apps"
     />
+    <meta
+      name="keywords"
+      content="web developer, web development, JavaScript developer, FullStack developer, React JS developer, Node js developer"
+    />
+    <meta name="author" content="Daniel Ikoyo Omovigh0" />
+    <meta name="copyright" content="Daniel Ikoyo Omovigh0" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="apple-touch-icon"
@@ -92,6 +98,10 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap"
       rel="stylesheet"
     />
+
+    <!-- google verification -->
+    <meta name="google-site-verification" content="KL5mft9wxm1E8LLBFmiZZp76NAtn4FTlp6czpD2LczU" />
+    
     <title>Ikoyo Daniel | FullStack developer</title>
   </head>
   <body>
