added open graph meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,33 @@
     />
     <meta name="author" content="Daniel Ikoyo Omovigh0" />
     <meta name="copyright" content="Daniel Ikoyo Omovigh0" />
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow" />
+    <meta
+      name="description"
+      content="Daniel Ikoyo is a FullStack web developer who specializes in building scalable, responsive, and aesthetic web apps"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ikoyo Daniel | FullStack developer" />
+    <meta
+      property="og:description"
+      content="Daniel Ikoyo is a FullStack web developer who specializes in building scalable, responsive, and aesthetic web apps"
+    />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/image-uploader-aa214.appspot.com/o/images%2FOGIMAGE.webp?alt=media&token=e26901bf-ecae-4451-993b-aeeec894ffc1"
+    />
+    <meta property="og:image:alt" content="" />
+    <meta property="og:image:width" content="1366" />
+    <meta property="og:image:height" content="657" />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:site_name"
+      content="Ikoyo Daniel | FullStack developer"
+    />
+    <meta property="og:url" content="https://danielikoyo.netlify.app" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="apple-touch-icon"
@@ -100,8 +127,11 @@
     />
 
     <!-- google verification -->
-    <meta name="google-site-verification" content="KL5mft9wxm1E8LLBFmiZZp76NAtn4FTlp6czpD2LczU" />
-    
+    <meta
+      name="google-site-verification"
+      content="KL5mft9wxm1E8LLBFmiZZp76NAtn4FTlp6czpD2LczU"
+    />
+
     <title>Ikoyo Daniel | FullStack developer</title>
   </head>
   <body>
